feat(style): fix stream over

--- a/engine-ui/packages/console-ui/src/webapps/main/styles/comm.css
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/comm.css
@@ -215,10 +215,10 @@
 
 .mask-lock-layer {
     position: absolute;
-    top: 48;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    top: 48px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
     z-index: 3;
     background: rgba(255, 255, 255, 0.4);
     cursor: not-allowed;
