--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/dashboard.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/dashboard.scss
@@ -74,7 +74,7 @@
         .tooltip-img{
             width: 14px;
             float: right;
-            margin-top: 17;
+            margin-top: 17px;
         }
         .cancel-top{
             color: #94A8C6;
