--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/operation.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/operation.scss
@@ -323,6 +323,7 @@
     background: #fff;
     border:1px solid #dddddd;
     position: relative;
+    height: 100%;
     header{
         padding: 7.5px 0px 8.5px 21px;
         font-size: 14px;
@@ -435,4 +436,28 @@
         background: #fff;
     }
 }
-
+.c-runcode {
+    >.ant-tabs-content {
+        height: calc(100% - 36px);
+        >.ant-tabs-tabpane {
+            height: 100%;
+        }
+    }
+}
+.m-tabs {
+    >.c-runcode {
+        >.ant-tabs-bar{
+            >.ant-tabs-nav-container{
+                >.ant-tabs-nav-wrap{
+                    margin-bottom: 0px;
+                }
+                .ant-tabs-nav .ant-tabs-tab{
+                    line-height: 18px;
+                    &.ant-tabs-tab-active {
+                        line-height: 20px;
+                    }
+                }
+            }
+        }
+    }
+}
