--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
@@ -19,18 +19,21 @@
         height: 165px;
         background: #ffffff;
         vertical-align: middle;
-        text-align: center;
         border: 1px solid #e9e9e9;
         border-radius: 3px;
         font-size: 60px;
         color: #808080;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         cursor: pointer;
-        .anticon {
+        >.anticon {
+            display: block;
             width: 100px;
             height: 100px;
             margin-top: 20px;
         }
-        .operation-title{
+        >.operation-title{
             line-height: 20px;
             font-size: 14px;
             color: #333;
@@ -119,6 +122,7 @@
         }
 
         &>.ant-tabs-content {
+            height: 100%;
             margin: 0;
             padding: 0;
         }
@@ -129,8 +133,9 @@
     }
 
     .task-sidebar {
-
+        height: 100%;
         .ant-tabs-tabpane {
+            height: 100%;
             overflow: hidden;
         }
 
@@ -266,9 +271,7 @@
                 flex-grow: 0;
                 flex-shrink: 0;
                 border-bottom: 1px solid #E8E8E8;
-                line-height: 32px;
                 text-align: right;
-                font-size: 18px;
                 z-index: 999;
                 background: #ffffff;
                 padding-right: 15px;
@@ -475,7 +478,11 @@
         border-top: 1px solid #dddddd;
 
         .browser-tabs {
-
+            >.ant-tabs-bar{
+                >.ant-tabs-extra-content{
+                    height: 30px;
+                }
+            }
             .ant-tabs-nav-container{
                 font-size: 12px;
                 height: 30px;
@@ -586,7 +593,7 @@
             display: inline-block;
             border-radius: 50%;
             position: absolute;
-            top: 10.5px;
+            top: 13px;
             right: 5px;
             width: 8px;
             height: 8px;
@@ -595,6 +602,7 @@
         }
 
         .tab-ellipsis {
+            line-height: 19px;
             display: inline-block;
             max-width: 200px;
             overflow: hidden;
@@ -608,11 +616,8 @@
         .browser-content {
             &>.ant-tabs {
                 .ant-tabs-bar {
-                    margin-bottom: 1px;
+                    margin-bottom: 0px;
                     border-bottom: 0;
-                    border-radius: 0px;
-                    margin-left: -1px;
-                    border-left: none;
                 }
         
                 .ant-tabs-content {
@@ -667,6 +672,9 @@
                 border-bottom: 1px solid #e9e9e9;
                 border-radius: 4px;
                 padding-right: 0;
+                >.ant-tabs-tabpane{
+                    height: 100%;
+                }
             }
             .ant-tabs-tab {
                 font-size: 12px;
@@ -731,7 +739,7 @@
             margin-top: 20px;
         }
         .panel-content{
-            padding: 20 20 20 20;
+            padding: 20px 20px 20px 20px;
             .input-panel{
               background:#f7f7f7;
               border: 1px solid #ddd;
@@ -1107,4 +1115,13 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 450px
+}
+.c-task__content__spin-box {
+    height: 100%;
+    >.ant-spin-container {
+        height: 100%;
+        >.c-task__main-box {
+            height: 100%;
+        }
+    }
 }
