feat(style): complete analytics style fix

--- a/engine-ui/packages/console-ui/src/webapps/main/styles/comm.css
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/comm.css
@@ -243,6 +243,9 @@
     font-size: 60px;
     color: #808080;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .operation-content .anticon {
