--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/siderbar.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/siderbar.scss
@@ -1,4 +1,8 @@
 .c-antd-tabs-sidebar{
+    height: 100%;
+    >.ant-tabs-bar{
+        height: 100%;
+    }
     &.u-pane--hidden {
         .ant-tabs-content {
             display: none;
@@ -61,6 +65,10 @@
         }
     }
     &.ant-tabs-vertical.ant-tabs-left > .ant-tabs-content {
+        >.ant-tabs-tabpane{
+            height: 100%;
+        }
+        height: 100%;
         padding-left: 0px;
         background: #f5f5f5
     }
@@ -159,7 +167,8 @@
                     }
                 }
                 >.ant-tabs-content {
-                    .ant-tabs-tabpane {
+                    >.ant-tabs-tabpane {
+                        height: 100%;
                         background: #F5F5F5;
                         padding: 9.5px 14px;
                     }
