--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/siderbar.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/workbench/siderbar.scss
@@ -51,6 +51,7 @@
             font-size: 15px;
             line-height: 21px;
             margin-right: 12px;
+            vertical-align: top;
             cursor: pointer;
         }
     }
