fix(style): fix api style

--- a/engine-ui/packages/console-ui/src/webapps/dataApi/styles/views/apiMine.scss
+++ b/engine-ui/packages/console-ui/src/webapps/dataApi/styles/views/apiMine.scss
@@ -1,5 +1,6 @@
 .api-mine{
     margin:0px 20px 20px 20px;
+    height: calc(100% - 20px);
     &>.ant-card{
         .ant-card-body>.ant-tabs{
             height: auto;
