--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/resourceManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/resourceManage.scss
@@ -47,7 +47,7 @@
         }
         .tab-pane-wrapper {
             border: 1px solid #DDDDDD;
-            margin: 20;
+            margin: 20px;
         }
     }
 }
