--- a/engine-ui/packages/console-ui/src/webapps/main/styles/views/message.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/views/message.scss
@@ -18,3 +18,13 @@
         }
     }
 }
+.c-messgae__list {
+    >.ant-tabs {
+        >.ant-tabs-content{
+            height: calc(100% - 80px);
+            >.ant-tabs-tabpane{
+                height: 100%;
+            }
+        }
+    }
+}
