--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
@@ -375,8 +375,28 @@
 .sidebar__icon {
     float: left;
     display: block;
-    margin: 12px 10px 0 0;
+    margin-right: 10px;
 }
+.ele-padd_small {
+    .sidebar__icon {
+        margin-top: 12px;
+    }
+    &.ant-menu-inline-collapsed {
+        .sidebar__icon {
+            margin-top: 0px;
+        }
+    }
+}
+
+.ant-layout-sider-trigger {
+    background: #2E3943;
+    color: #959FB1;
+    border-right: 1px solid #e9e9e9;
+    .anticon-left {
+        padding-top: 18px;
+    }
+}
+
 .m-table-desen {
     .ant-table-thead > tr > th.ant-table-selection-column, .ant-table-tbody > tr > td.ant-table-selection-column {
         text-align: center;
