--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/themes/default.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/themes/default.scss
@@ -17,5 +17,18 @@
             background-color: #c2c2c2;
         }
     }
-
+    .task-tab-menu {
+        &>.ant-tabs-bar {
+            .ant-tabs-tab {
+                &.ant-tabs-tab-active {
+                    background: #2491F7;
+                    color: #FFFFFF;
+                }
+            }
+            .ant-tabs-ink-bar {
+                left: 0;
+                width: 0px;
+            }
+        }
+    }
 }
