fix(style): fix the style ui

--- a/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
@@ -295,9 +295,13 @@
             padding-left: 18px !important;
         }
         &.ele-padd_small {
-            > .ant-menu-item {
+            > .ant-menu-item, .ant-menu-submenu {
                 padding-top: 10px !important;
             }
+        }
+        .ant-menu-submenu-selected {
+            height: 42px;
+            background: #2491F7;
         }
         // .sidebar__icon {
         //     float: left;
