fix(console): add flink params and optimize style
add flink params and optimize style

fix #17493 #17492

--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
@@ -9,14 +9,14 @@
 }
 .tabpane-content-max {
     padding-bottom: 30px;
-    max-height: 450px;
-    overflow: auto;
-}
-.tabpane-content-min {
-    padding-bottom: 30px;
     max-height: calc(100% - 60px);
     overflow: auto;
 }
+// .tabpane-content-min {
+//     padding-bottom: 30px;
+//     max-height: calc(100% - 60px);
+//     overflow: auto;
+// }
 .engine-config-content{
     margin-top: 20px;
     // padding-left: 20px;
