style(console): fix style
fix style

fix #17492

--- a/engine-ui/packages/console-ui/src/webapps/console/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/main.scss
@@ -34,7 +34,7 @@ table{
     .ant-tabs {
         box-sizing: border-box;
         position: relative;
-        overflow-y: auto;
+        // overflow-y: auto;
         zoom: 1;
         color: rgba(0, 0, 0, 0.65);
     }
