--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
@@ -7,33 +7,20 @@
     padding-left: 20px;
     margin-bottom: 5px;
 }
+.console-compontent {
+    margin: 10px 20px 20px 20px;
+    height: 700px;
+}
 .tabpane-content-max {
-    padding-bottom: 30px;
-    max-height: calc(100% - 60px);
+    padding-bottom: 80px;
+    height: 698px;
     overflow: auto;
 }
-// .tabpane-content-min {
-//     padding-bottom: 30px;
-//     max-height: calc(100% - 60px);
-//     overflow: auto;
-// }
 .engine-config-content{
     margin-top: 20px;
-    // padding-left: 20px;
-    padding-bottom: 15px;
+    padding-bottom: 30px;
     margin-left: 24px;
     width: 680px;
-}
-.config-bottom-short {
-    position: absolute;
-    z-index: 100;
-    bottom: 40px;
-    width: 100%;
-    height: 50px;
-    background: #FFFFFF;
-    line-height: 50px;
-    padding: 11px 0;
-    // box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.05);
 }
 .config-bottom-long {
     position: absolute;
@@ -42,7 +29,7 @@
     width: 100%;
     height: 50px;
     background: #FFFFFF;
-    line-height: 50px;
+    line-height: 1.1;
     padding: 11px 0;
     box-shadow: 0 -4px 4px 0 rgba(0,0,0,0.05);
 }
