style(console): fix style
fix style

--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/clusterManage.scss
@@ -49,7 +49,7 @@
 }
 .ant-btn.disble{
     cursor:not-allowed;
-    color:rgba(1,1,1,0.54);
+    color:rgba(124, 68, 68, 0.54);
 }
 .ant-btn.disble:hover{
     color: rgba(1,1,1,0.54);
@@ -76,7 +76,7 @@
     max-width: 300px;
 }
 .upload-config {
-    margin: -21px 0 50 95px;
+    margin: -21px 0 50px 95px;
 }
 .upload-file {
     width: 100%;
