--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/resourceManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/resourceManage.scss
@@ -107,5 +107,5 @@
     font-family: PingFangSC-Medium;
     font-size: 14px;
     color: #333333;
-    padding: 10 0 10 60;
+    padding: 10px 0 10px 60px;
 }
