fix(style): fix the style
fix #17227, fix #17603, fix #17591

--- a/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
@@ -72,7 +72,7 @@
         }
         .ant-tabs-bar .ant-tabs-tab-active {
             background: #fff;
-            padding-bottom: 4px;
+            padding-bottom: 5px;
             &:after{
                 content:"";
                 position: absolute;
@@ -87,7 +87,7 @@
 
         .ant-tabs.ant-tabs-card > .ant-tabs-bar .ant-tabs-tab {
             margin-right: -1px;
-            border-bottom: 1px solid #dddddd;
+            // border-bottom: 1px solid #dddddd;
         }
 
         .ant-tabs-nav div:nth-child(2) {
