--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
@@ -357,7 +357,7 @@
     .ant-checkbox-wrapper {
         min-width: 100px;
         cursor: pointer;
-        font-size: 12px;
+        font-size: 13px;
         display: inline-block;
     }
 }
@@ -389,6 +389,7 @@
 }
 
 .ant-layout-sider-trigger {
+    position: absolute;
     background: #2E3943;
     color: #959FB1;
     border-right: 1px solid #e9e9e9;
