--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/operation.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/operation.scss
@@ -249,7 +249,7 @@
         padding: 0;
         position: relative;
     }
-    .m-table {
+    .m-table, .dt-ant-table {
         .ant-table-footer {
             background: #fff;
             padding: 10px 0 0;
