--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -69,12 +69,12 @@
             // .ant-tabs-tab:hover{
             //     background:#eef6fe;
             // }
-            .ant-tabs-tab-active {
+            // .ant-tabs-tab-active {
                 // border-top: 1px solid #dddddd;
-                border-top: 1px solid hsla(0,0%,100%,.2);
+                // border-top: 1px solid hsla(0,0%,100%,.2);
                 // border-bottom: 1px solid #dddddd;
-                border-bottom: 1px solid hsla(0,0%,100%,.2)
-            }
+                // border-bottom: 1px solid hsla(0,0%,100%,.2)
+            // }
             .ant-tabs-nav {
                 background: none;
             }
