--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/themes/dark.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/themes/dark.scss
@@ -7,7 +7,21 @@ $borderColor1: #5A5A5A;
 $fontColor1: #2491F7;
 
 .theme-dark {
-
+    .dt-ant-table--border {
+        .ant-table-body, .ant-table-body-outer {
+            border-width: 1px 1px 0px 1px;
+            border-color: #5A5A5A;
+            border-style: solid;
+        }
+        .ant-table-body-outer {
+            border-width: 1px 0 0;
+        }
+        .ant-table-placeholder{
+            border-width: 0px 1px 1px 1px;
+            border-style: solid;
+            border-color: #5A5A5A;
+        }
+    }
     background: $color1 !important;
     color: $fontColor;
 
