--- a/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
@@ -62,7 +62,7 @@
 
     .ide-console {
         width: 100%;
-        margin-top: 2px;
+        // margin-top: 2px;
         position: relative;
         z-index: 1;
         .ant-tabs {
