fix(style): fix the style silder px
fix #17660

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -60,7 +60,7 @@
             color: #FFFFFF;
             .ant-tabs-tab {
                 height: auto;
-                padding: 10px 5px;
+                padding: 10px 4px 10px 5px;
                 writing-mode: tb-rl;
                 letter-spacing: 3px;
                 margin-bottom: 0;
