fix(style): fix the style
fix #17634

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -525,7 +525,7 @@
         .ant-tabs.ant-tabs-card>.ant-tabs-bar .ant-tabs-tab .anticon-close {
             margin-top: -5px;
             line-height: 10px;
-            opacity: 1;
+            // opacity: 1;
             font-size: 11px;
         }
         .browser-tabs.ant-tabs.ant-tabs-card > .ant-tabs-bar .ant-tabs-tab {
