fix(style): fix the style
fix #17227, fix #17648

--- a/engine-ui/packages/console-ui/src/webapps/console/styles/views/queueManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/console/styles/views/queueManage.scss
@@ -38,7 +38,7 @@
 .detail-table {
     .ant-table-footer {
         background: #fff;
-        padding: 10px 0 0;
+        padding: 10px 0 10px;
         border-bottom: 0;
     }
     .ant-pagination {
