--- a/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
@@ -233,7 +233,7 @@
         }
         .ant-table-footer {
             background: #fff;
-            padding: 0;
+            // padding: 0;
             border-bottom: 1px solid $tbBorderColor;
             &>tr>td {
                 padding: 4px 8px;
