--- a/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
@@ -37,7 +37,8 @@
                 height: 100%;
             }
             .extra-view{
-               overflow: auto;
+                height: 100%;
+                overflow: auto;
             }
     }
 
