--- a/engine-ui/packages/console-ui/src/webapps/science/styles/views/layout.scss
+++ b/engine-ui/packages/console-ui/src/webapps/science/styles/views/layout.scss
@@ -2,6 +2,9 @@
     .sidebar {
         height: 100%;
         position: relative;
+        // .s-catalogue {
+        //     background: #f5f5f5;
+        // }
     }
     .container{
         background: #ffffff;
